# solace-sam-artifacts

./: .gitignore  .markdownlint.yaml  CLAUDE.md  README.md
Agent Builder Agents/Contract Management Agent/: contract_management_db.sql
Agent Builder Agents/Web Research Agent/: Web Research Agent.md
Agents/Core Agents/: sam-core-agents-config.yaml  sam-core-agents-deployment.yaml  sam-core-agents-secret.yaml
Agents/External Agents/Web Scraper Agent/: .gitignore  .markdownlint.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-lock.txt
Agents/External Agents/Web Scraper Agent/.github/workflows/: ci.yaml
Agents/External Agents/Web Scraper Agent/deploy/: sam-web-scraper-agent-config.yaml  sam-web-scraper-agent-deployment.yaml  sam-web-scraper-agent-secret.yaml
Agents/External Agents/Web Scraper Agent/src/web_scraper_mcp/: __init__.py  browser_manager.py  config.py  errors.py  image_extractor.py  response.py  server.py  validation.py
Agents/External Agents/Web Scraper Agent/src/web_scraper_mcp/tools/: __init__.py  download_file.py  download_image.py  fetch_webpage.py  screenshot.py  search_image.py
Agents/External Agents/Web Scraper Agent/tests/: test_config.py  test_download_image.py  test_errors.py  test_integration.py  test_response.py  test_server.py  test_validation.py
Agents/Workflows/: procurement-workflow.yaml
Custom Agents/Datadog MCP Agent/: .gitignore  Dockerfile  pyproject.toml
Custom Agents/Datadog MCP Agent/deploy/: sam-datadog-mcp-agent-configmap.yaml  sam-datadog-mcp-agent-deployment.yaml  sam-datadog-mcp-agent-secret.yaml
Custom Agents/Datadog MCP Agent/src/datadog_mcp/: __init__.py  server.py
Custom Agents/Datadog MCP Agent/src/datadog_mcp/tools/: audit.py  cicd.py  downtimes.py  events.py  hosts.py  logs.py  monitors.py  network.py  notebooks.py  services.py  synthetics.py
Custom Agents/Datadog MCP Agent/src/datadog_mcp/utils/: formatting.py  pagination.py
Custom Agents/Datadog MCP Agent/tests/: conftest.py  test_tools_logs.py  test_tools_new.py
Custom Agents/EAN Agent/: .dockerignore  Dockerfile  README.md
Custom Agents/Geo Information Agent/: Dockerfile  README.md
Custom Agents/Price Comparison Agent/: .dockerignore  Dockerfile  README.md
Custom Agents/Solace Broker MCP Agent/: README.md  sam-solace-broker-mcp-agent-config.yaml  sam-solace-broker-mcp-agent-deployment.yaml  solace_monitoring_mcp_server.py
Deployment/Helm/: README.md  local-k8s-values.yaml
Deployment/SearXNG/: README.md  searxng-configmap.yaml  searxng-deployment.yaml
External Agents/Datadog MCP Agent/: LICENSE  (+1 more)
External Agents/Price Comparison Agent/: pyproject.toml
External Agents/Price Comparison Agent/deploy/: sam-price-comparison-agent-deployment.yaml
External Agents/Price Comparison Agent/src/price_comparison_agent/scrapers/: __init__.py
External Agents/Price Comparison Agent/tests/: test_utils.py
(+79 files in other folders)
