[project]
name = "datadog-mcp-server"
version = "1.0.0"
description = "MCP server for Datadog REST API — 73 monitoring and management tools for Solace Agent Mesh"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.26",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
datadog-mcp-server = "datadog_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datadog_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
