[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-comparison-agent"
version = "1.0.0"
description = "Price Comparison Agent for Solace Agent Mesh"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = []
keywords = ["solace", "agent-mesh", "price-comparison", "idealo", "geizhals"]
dependencies = [
    "solace-agent-mesh>=1.18.0",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
